# edupage-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: edupage.rs  errors.rs  lib.rs  main.rs  models.rs  parsers.rs
