[package]
name = "edupage-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
derive_more = "0.99.17"
futures = "0.3.28"
reqwest = { version = "0.11.16", features = ["cookies"] }
serde = "1.0.160"
serde-aux = "4.2.0"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
